# scraper

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.builds/: clippy.yml  docker.yml
.github/workflows/: build.yml  container.yml  main.yml
src/: config.rs  main.rs  models.rs  scraper.rs
