[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
thiserror = "1.0.57"
anyhow = "1.0.80"
env_logger = "0.11.2"
serde = { version = "1.0.197", features = ["derive"] }
figment = { version = "0.10.14", features = ["env"] }
reqwest = { version = "0.11.26", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1.36.0", features = ["full"] }
indicatif = "0.17.8"
chrono = { version = "0.4.35", features = ["serde"] }
serde_json = "1.0.114"
scraper = "0.19.0"
poppler-rs = { version = "0.22.0", features = ["v22_7"] }
glib = "0.18.5"
regex = "1.10.3"
futures = "0.3.30"
futures-util = "0.3.30"
